<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chooseSensorDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/chooseSensor"
        android:textAlignment="center"
        android:textAppearance="@style/TextTitle18"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sensorList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/chooseSensorDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chooseSituation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/chooseSituation"
        android:textAlignment="center"
        android:textAppearance="@style/TextTitle18"
        app:layout_constraintTop_toBottomOf="@id/sensorList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/situationList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/chooseSituation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chooseCulture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="38dp"
        android:text="@string/choose_culture"
        android:textAlignment="center"
        android:textAppearance="@style/TextTitle18"
        app:layout_constraintTop_toBottomOf="@id/situationList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/agriculture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/chooseCulture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createFieldButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_button_primary"
        android:text="@string/create_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>