<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fieldInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cultureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextRegular12"
            android:text="@string/culture"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/culture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextValue12"
            app:layout_constraintTop_toTopOf="@id/cultureTitle"
            app:layout_constraintStart_toEndOf="@id/cultureTitle"
            app:layout_constraintBottom_toBottomOf="@id/cultureTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/seasonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/season"
            android:textAppearance="@style/TextRegular12"
            app:layout_constraintTop_toBottomOf="@id/cultureTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextValue12"
            app:layout_constraintTop_toTopOf="@id/seasonTitle"
            app:layout_constraintBottom_toBottomOf="@id/seasonTitle"
            app:layout_constraintStart_toEndOf="@id/seasonTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sensorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextRegular12"
            android:text="@string/sensor"
            app:layout_constraintTop_toBottomOf="@id/seasonTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextValue12"
            app:layout_constraintTop_toTopOf="@id/sensorTitle"
            app:layout_constraintBottom_toBottomOf="@id/sensorTitle"
            app:layout_constraintStart_toEndOf="@id/sensorTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/fieldInfoContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/makeButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/makeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_button_primary"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/mapview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>